<resources>
    <string name="underline_description" translatable="false">underline</string>
    <string name="common_new_pw">새 비밀번호</string>
    <string name="common_new_pw_check">새 비밀번호 확인</string>
    <string name="common_input_pw_six_digits">비밀번호를 숫자 6자리로 입력해 주세요.</string>
    <string name="common_pw_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="common_pw_change">비밀번호 변경</string>
    <string name="banner_count">%d/%d</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="phone_call">전화하기</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="share">공유하기</string>
    <string name="email">이메일</string>
    <string name="email_id">이메일 아이디</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="password">비밀번호</string>
    <string name="account_setting">계정 설정</string>
    <string name="sale_coupon">할인 쿠폰</string>
    <string name="shopping_cart">장바구니</string>
    <string name="coupon_register_success">쿠폰 등록이 완료되었습니다.</string>
    <string name="already_coupon_registered">이미 등록한 쿠폰입니다.\n확인 후 다시 시도해 주세요.</string>
    <string name="already_used_coupon">이미 사용한 쿠폰입니다.\n쿠폰 번호를 다시 확인해 주세요</string>
    <string name="not_exist_coupon">유효하지 않은 쿠폰입니다.\n쿠폰 번호를 다시 확인해 주세요.</string>
    <string name="event_or_notice">이벤트/공지사항</string>
    <string name="event">이벤트</string>
    <string name="notice">공지사항</string>
    <string name="font_name_nanum_gothic">nanum_gothic.ttf</string>
    <string name="common_title_review">전체 리뷰</string>
    <string name="common_title_review_modify">리뷰 수정</string>
    <string name="common_title_review_modify_complete_button">수정하기</string>
    <string name="dialog_list_filter_title">정렬기준</string>
    <string name="dialog_list_filter_complete">완료</string>
    <string name="common_toast_msg_finish">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="common_toast_msg_connection_fail">서버와 통신이 원활하지 않습니다.</string>
    <string name="common_toast_msg_check_date">조회 날짜를 다시 확인해주세요.</string>
    <string name="common_toast_msg_review_write_success">리뷰 등록이 완료되었습니다.</string>
    <string name="common_toast_msg_review_write_fail">리뷰 등록을 실패하였습니다.</string>
    <string name="common_toast_msg_review_modify_success">리뷰 수정이 완료되었습니다.</string>
    <string name="common_toast_msg_review_modify_fail">리뷰 수정을 실패하였습니다.</string>
    <string name="common_toast_msg_review_delete_success">리뷰 삭제가 완료되었습니다.</string>
    <string name="common_toast_msg_review_delete_fail">리뷰 삭제를 실패하였습니다.</string>
    <string name="common_toast_msg_canceled">취소되었습니다.</string>
    <string name="common_toast_msg_success_pw_change">비밀번호가 변경되었습니다.</string>
    <string name="common_toast_msg_network_err">예기치 못한 오류가 발생했습니다. \n일시적인 현상이거나 네트워크 문제일 수 \n있으니 잠시 후 다시 시도해 주시길 바랍니다. \n동일한 증상이 계속 발생하는 경우 고객센터로 \n문의 주시면 확인 후 도움 드리도록 하겠습니다.</string>
    <string name="common_toast_msg_data_load_fail_at_server">서버에서 설정값을 불러 오지 못하였습니다.</string>
    <string name="common_toast_msg_success_profile_change">프로필 수정 완료 되었습니다.</string>
    <string name="common_toast_msg_please_enter_email">이메일을 입력해주세요.</string>
    <string name="common_toast_msg_email_format_not_available">사용할수 없는 이메일 형식입니다.</string>
    <string name="common_toast_msg_please_enter_phone_number">전화번호를 입력해주세요.</string>
    <string name="common_toast_msg_phone_number_format_not_available">사용할수 없는 전화번호 형식입니다</string>
    <string name="common_toast_msg_please_enter_title">제목을 입력해주세요.</string>
    <string name="common_toast_msg_please_enter_content">내용을 입력해주세요.</string>
    <string name="common_toast_msg_cannot_contain_special_characters">주소 검색시에는 특수문자를 포함할 수 없습니다.</string>
    <string name="common_toast_msg_card_register_success">카드 등록이 완료 되었습니다.</string>
    <string name="common_toast_msg_card_register_fail">카드 등록을 실패하였습니다.\n</string>
    <string name="common_toast_msg_agreement_register_fail">약관동의 요청이 실패되었습니다.</string>
    <string name="common_toast_msg_no_register_photo">등록된 사진이 없습니다.</string>
    <string name="common_toast_msg_use_available_after_login">로그인 후 사용 가능합니다.</string>
    <string name="common_dialog_msg_loading">조회중&#8230;</string>
    <string name="common_dialog_msg_review">리뷰 등록중&#8230;</string>
    <string name="dialog_list_filter_oder_grade">평점 순</string>
    <string name="dialog_list_filter_oder_saving">적립률 순</string>
    <string name="dialog_list_filter_oder_distance">거리 순</string>
    <string name="dialog_list_filter_oder_review">리뷰 순</string>
    <string name="dialog_list_filter_oder_favor">즐겨찾기 순</string>
    <string name="dialog_list_filter_oder_takeout">테이크아웃매장</string>
    <string name="dialog_list_filter_oder_owner_reply">사장님 댓글 순</string>
    <string name="dialog_list_filter_oder_event">이벤트 여부</string>
    <string name="common_time_event_default_save_rate">적립률 %d%%</string>
    <string name="common_time_event_add_save_rate">추가적립 %d%%</string>
    <string name="common_time_event_fixed_amount">%s원 할인</string>
    <string name="common_time_event_fixed_rate">%d%% 할인</string>
    <string name="moa_optional_access_dialog_title">선택적 접근 권한 안내</string>
    <string name="moa_optional_access_dialog_title_content">MOA B2C APP은 정보통신망법령에 따라 서비스에 필요한 항목들에 대해 아래와 같이 접근합니다.</string>
    <string name="moa_optional_access_dialog_location_info">위치정보</string>
    <string name="moa_optional_access_dialog_location_content">현재 사용자의 위치 확인</string>
    <string name="moa_optional_access_dialog_sms_title" translatable="false">SMS</string>
    <string name="moa_optional_access_dialog_sms_content">SMS 인증번호 자동 입력</string>
    <string name="moa_optional_access_dialog_telephone_title">전화</string>
    <string name="moa_optional_access_dialog_telephone_content">회원가입 및 인증</string>
    <string name="moa_optional_access_dialog_camera_photo_title">사진/카메라</string>
    <string name="moa_optional_access_dialog_camera_photo_content">프로필 및 사진 리뷰 첨부</string>
    <string name="moa_optional_access_dialog_storage_space_title">저장공간</string>
    <string name="moa_optional_access_dialog_content_info">선택적 접근권한은 해당 기능을 사용할 때 허용이 필요하며,\n비 허용 시에도 해당 기능 외 서비스 이용이 가능합니다.</string>
    <string name="moa_optional_access_dialog_change_access_title">접근권한 변경 방법</string>
    <string name="moa_optional_access_dialog_change_access_content">휴대전화 설정 > 모아 B2C APP</string>
    <string name="moa_optional_access_dialog_done">확인</string>
    <string name="yes_or_no_dialog_title">알림</string>
    <string name="yes_or_no_dialog_yes">예</string>
    <string name="yes_or_no_dialog_no">아니오</string>
    <string name="yes_or_no_dialog_content_gps_on">위치 설정을 허용해야만 합니다.\n위치설정을 허용하시겠습니까?</string>
    <string name="yes_or_no_dialog_content_force_update">최신버전으로 업데이트를 \n진행하여 주세요.</string>
    <string name="yes_or_no_dialog_content_select_update">최신버전이 있습니다. \n업데이트를 진행하시겠습니까?</string>
    <string name="yes_or_no_dialog_content_delete_card">카드를 삭제하시겠습니까?</string>
    <string name="yes_or_no_dialog_content_logout">로그아웃 시 비회원으로 로그인하게 됩니다. 로그아웃 하시겠습니까?</string>
    <string name="yes_or_no_dialog_content_expire">회원 탈퇴 시 삭제된 정보는 다시 복구할 수 없습니다. 회원 탈퇴 시 정상적인 앱 구동을 위해 앱이 종료됩니다.\n회원을 탈퇴하시겠습니까?</string>
    <string name="yes_or_no_dialog_content_delete_review">리뷰를 삭제하시겠습니까?</string>
    <string name="one_button_dialog_title">알림</string>
    <string name="one_button_dialog_btn_ok">확인</string>
    <string name="one_button_dialog_title_point_tooltip">활성 예정 포인트란?</string>
    <string name="one_button_dialog_content_point_tooltip">주문 결제 시 매장에서 적립금으로\n지급되었지만 적립 정책에 따라 \n일정 시간 이후 활성화되어 \n사용 가능한 포인트입니다.</string>
    <string name="agreement_to_terms_of_use_title">이용약관 동의</string>
    <string name="agreement_to_terms_of_use_all_agree_text">전체 동의</string>
    <string name="agreement_to_terms_of_use_agree_all_reed"><u>전문보기</u></string>
    <string name="agreement_to_terms_of_use_agree_start">아래 약관에 동의하시면\n서비스를 시작할 수 있습니다.</string>
    <string name="agreement_to_terms_of_use_condition">이용약관</string>
    <string name="agreement_to_terms_of_use_gps">위치기반 서비스 이용약관 동의(필수)</string>
    <string name="agreement_to_terms_of_use_event">쿠폰/할인 이벤트 혜택 알림(선택)</string>
    <string name="agreement_to_terms_of_use_event_content">다양한 쿠폰 정보와 이벤트 혜택 정보 수신을 위한\n동의가 필요합니다.</string>
    <string name="agreement_to_terms_of_use_gps_content">주변 매장 검색을 위해 위치기반 서비스 이용약관 및\n위치 정보 사용에 대한 동의가 필요합니다.</string>
    <string name="agreement_to_terms_of_use_event_push_agree">모아(%s)\n마케팅 정보 수신 동의 처리가 완료되었습니다.</string>
    <string name="agreement_to_terms_of_use_answer_push_agree">모아(%s)\n1:1 문의 답변 수신 동의 처리가 완료되었습니다.</string>
    <string name="agreement_to_terms_of_use_etiquette_push_agree">모아(%s)\에티켓 모드 동의 처리가 완료되었습니다.</string>
    <string name="agreement_to_terms_of_use_event_push_disagree">모아(%s)\n마케팅 정보 수신 거부 처리가 완료되었습니다.</string>
    <string name="agreement_to_terms_of_use_done_button_text">시작하기</string>
    <string name="agreement_to_terms_of_use_when_coupon_or_event_subscribe_rejected">알림 수신 거부 시 할인 쿠폰 및 이벤트 소식을 받으실 수 없습니다.\n정말 알림을 수신 거부하시겠습니까?</string>
    <string name="agreement_to_terms_of_use_when_answer_subscribe_reject">알림 수신 거부 시 답변 알림을 받을수 없습니다.\n정말 알림을 수신 거부하시겠습니까?</string>
    <string name="agreement_to_terms_of_use_when_night_subscribe_reject">알림 수신 거부 시 야간시간 알림을 받을수 없습니다.\n정말 알림을 수신 거부하시겠습니까?</string>
    <string name="location_setting_address_item_jibun">[지번] %s</string>
    <string name="location_setting_input_address_hint">도로명, 지번, 건물명으로 검색</string>
    <string name="location_setting_search_address_introduce">‘<![CDATA[<b><font color=#ff794c>현 위치</font></b>]]>’ 버튼을 누르면 간편하게<![CDATA[<br/>]]>현재 위치를 검색할 수 있습니다.</string>
    <string name="location_setting_default_address">기본 주소</string>
    <string name="location_setting_recently_address">최근 주소</string>
    <string name="location_setting_search_address">주소 검색 결과</string>
    <string name="location_permission_denied">"현재 위치 검색을 위해 권한이 필요합니다.\n\n[설정] > [권한]에서 허용으로 변경해 주세요.</string>
    <string name="location_default_setting_top_toolbar_title">위치 설정</string>
    <string name="location_default_setting_top_toolbar_my_location">현 위치</string>
    <string name="location_default_setting_address_select_result_title">주소 검색 결과</string>
    <string name="location_default_setting_default_address_title">기본 주소</string>
    <string name="storesearch_input_keyword_hint">검색어를 입력하세요.</string>
    <string name="storesearch_item_empty_search_data">해당하는 매장이 없습니다.</string>
    <string name="storesearch_item_empty_recent_search_keyword">최근 검색어가 없습니다.</string>
    <string name="storesearch_item_empty_ic_description">검색 아이콘</string>
    <string name="store_search_list_empty">검색 결과가 없습니다.</string>
    <string name="detail_address_title">상세 주소 설정</string>
    <string name="location_detail_setting_address_set">상세 주소 설정하기</string>
    <string name="input_detail_location_hint">상세주소 입력 (예: 모아빌딩 706호)</string>
    <string name="detail_address_done">이 주소로 설정하기</string>
    <string name="detail_address_fragment_map_loading">지도를 로딩중입니다.</string>
    <string name="detail_address_fragment_detail_address_empty">기본주소가 설정되지 않았습니다.</string>
    <string name="main_activity_title">MOA</string>
    <string name="main_activity_famous_ranking_title">맛집 랭킹</string>
    <string name="main_activity_famous_ranking_content">“우리동네 소문난 맛집 10선!”</string>
    <string name="main_activity_ad_click_text">클릭</string>
    <string name="achievement_reward_dialog_reward_pay">Rewards have been paid</string>
    <string name="achievement_reward_dialog_reward_title_temp">초보 리뷰어</string>
    <string name="achievement_reward_dialog_coin_ic_description" translatable="false">rewardCoin</string>
    <string name="achievement_reward_dialog_coin" translatable="false">%d Coin</string>
    <string name="achievement_reward_dialog_reward_step_temp">1단계 달성 보상</string>
    <string name="payment_reset_password_sub_title">결제 비밀번호 재설정</string>
    <string name="payment_reset_password_update">변경하기</string>
    <string name="sign_sp_id_title">가입하신 계정 이메일 ID 입니다.</string>
    <string name="activity_find_id_exist_id">해당 전화번호로 등록된 아이디가 없습니다.</string>
</resources>