<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.moaPlatform.moa.util.custom_view.CommonTitleView
        android:id="@+id/viewFindIdTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llFindIdContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llFindIdExist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_sp_id_title"
                android:textSize="@dimen/common_text_l_size" />

            <TextView
                android:id="@+id/tvFindEmail"
                style="@style/BlackColorBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_termsLayout_padding"
                android:textSize="@dimen/common_text_xl_size"
                tools:text="us****@gamil.com" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFindIdNotExist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/BlackColorBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_find_id_exist_id"
                android:textSize="@dimen/common_text_xl_size" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/viewIdSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btnFindIdLogin"
        style="@style/CoralBoldStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_toolbar_height"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>