<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.moaPlatform.moa.util.custom_view.CommonTitleView
        android:id="@+id/commonTitlePaymentResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llPaymentResetPasswordSettingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/commonTitlePaymentResetPassword">

        <TextView
            style="@style/MoaFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_reset_password_sub_title"
            android:textColor="@color/black"
            android:textSize="14.3sp"
            android:textStyle="bold" />

        <com.moaPlatform.moa.util.custom_view.CommonPasswordInputView
            android:id="@+id/inputPaymentResetPasswordCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvPaymentResetPasswordCheckPw"
            style="@style/MoaFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.3dp"
            android:text="비밀번호 숫자 6자리를 입력하세요."
            android:textColor="@color/coral"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvNotPaymentResetPassword"
            style="@style/MoaFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.3dp"
            android:text="비밀번호가 일치하지 않습니다."
            android:textColor="@color/coral"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="19.7dp"
            android:background="#dbdbdb" />

        <com.moaPlatform.moa.util.custom_view.CommonPasswordInputView
            android:id="@+id/inputPaymentResetPasswordNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/intoPasswordNumberChange"
            style="@style/MoaFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.3dp"
            android:text="비밀번호로 사용할 숫자 6자리를 입력하세요."
            android:textColor="@color/coral"
            android:textSize="12sp" />

        <com.moaPlatform.moa.util.custom_view.CommonPasswordInputView
            android:id="@+id/inputPaymentResetPasswordCheckPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tvPaymentResetPasswordCheckPw2"
            style="@style/MoaFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.3dp"
            android:text="@string/common_pw_not_match"
            android:textColor="@color/coral"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPaymentResetPasswordUpdate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="53.3dp"
        android:background="@drawable/common_radius_coral_button_form"
        android:gravity="center"
        android:text="@string/payment_reset_password_update"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
